force-app/main/default/objects/Success_Coach_Case_Flag__c.object
<CustomObject>
    <fields>
        <fullName>CC_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Case Classification Category field</description>
        <inlineHelpText>Lookup to the Case Classification Category field</inlineHelpText>
        <label>Case Category</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Case_Classification__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Case_Classification__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Category</value>
            </filterItems>
            <filterItems>
                <field>Case_Classification__c.Parent__c</field>
                <operation>equals</operation>
                <valueField>$Source.CC_Functional_Group__c</valueField>
            </filterItems>
            <infoMessage>Value does not exist or does not match filter criteria.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Case_Classification__c</referenceTo>
        <relationshipLabel>Success Coach Case Flags (Case Category)</relationshipLabel>
        <relationshipName>Success_Coach_Case_Flags1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CC_Functional_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Case Classification Functional Group field</description>
        <inlineHelpText>Lookup to the Case Classification Functional Group field</inlineHelpText>
        <label>Case Functional Group</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Case_Classification__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Case_Classification__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Functional Group</value>
            </filterItems>
            <filterItems>
                <field>Case_Classification__c.Name</field>
                <operation>contains</operation>
                <value>Coach</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Case_Classification__c</referenceTo>
        <relationshipLabel>Success Coach Case Flags (Functional Group)</relationshipLabel>
        <relationshipName>Success_Coach_Case_Flags</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Subject_Name__c</fullName>
        <label>Case Subject Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ad Hoc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CreateCase__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to set Case creation on or off.</description>
        <inlineHelpText>Used to set Case creation on or off.</inlineHelpText>
        <label>CreateCase</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FunctionalGroup__c</fullName>
        <label>FunctionalGroup</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ASU Coach Outreach</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to determine if this Case flag is still in use.</description>
        <inlineHelpText>Used to determine if this Case flag is still in use.</inlineHelpText>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <label>Origin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Automated</fullName>
                </value>
                <value>
                    <fullName>Resource</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>Used to set the Case priority upon creation.</description>
        <inlineHelpText>Used to set the Case priority upon creation.</inlineHelpText>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Urgent</fullName>
                </value>
                <value>
                    <fullName>1 - Highest Priority</fullName>
                </value>
                <value>
                    <fullName>2 - High Priority</fullName>
                </value>
                <value>
                    <fullName>3 - Normal Priority</fullName>
                </value>
                <value>
                    <fullName>4 - Minor Priority</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SendEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SendEmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Closed: No Contact Necessary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StoredProcedureName__c</fullName>
        <label>StoredProcedureName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Coach Initiated</fullName>
                </value>
                <value>
                    <fullName>System Generated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>An object used for Coach Case creation which allows for controlling of the creation of Cases from the SQL Flag Automation Process. Utilizes dbampsql-prod.ENTProd.dbo.edplus_CoachCases_Manager.</description>
    <label>Success Coach Case Flag</label>
    <nameField>
        <displayFormat>SCCF-{0}</displayFormat>
        <label>Success Coach Case Flag ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Success Coach Case Flags</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Case_Subject_Name__c</columns>
        <columns>CreateCase__c</columns>
        <columns>Priority__c</columns>
        <columns>IsActive__c</columns>
        <columns>CC_Functional_Group__c</columns>
        <columns>CC_Category__c</columns>
        <columns>FunctionalGroup__c</columns>
        <columns>Category__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>