force-app/main/default/objects/Success_Coach_Case_Flag__c/fields/Record_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_ID__c</fullName>
    <businessOwnerGroup>Data_Owner_Ed_Plus</businessOwnerGroup>
    <description>Salesforce ID for ASU Coach Outreach record type on the Case object</description>
    <formula>'012d00000021xGLAAY'</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Salesforce ID for ASU Coach Outreach record type on the Case object</inlineHelpText>
    <label>Record Type ID</label>
    <type>Text</type>
</CustomField>