force-app/main/default/objects/Success_Coach_Case_Flag__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <businessOwnerGroup>Data_Owner_Ed_Plus</businessOwnerGroup>
    <description>The value in this field is the subject line for the Salesforce case being created.</description>
    <inlineHelpText>The subject of the Salesforce case.</inlineHelpText>
    <label>Subject</label>
    <length>100</length>
    <type>Text</type>
</CustomField>