force-app/main/default/objects/Success_Coach_Case_Flag__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Case_Subject_Name__c</columns>
    <columns>CreateCase__c</columns>
    <columns>Priority__c</columns>
    <columns>IsActive__c</columns>
    <columns>CC_Functional_Group__c</columns>
    <columns>CC_Category__c</columns>
    <columns>FunctionalGroup__c</columns>
    <columns>Category__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>